--- a/source/good-morning-espanso-package/resources/good-morning_WIN.yml
+++ b/source/good-morning-espanso-package/resources/good-morning_WIN.yml
@@ -3,7 +3,7 @@ parent: default
 
 matches:
   - trigger: ":img-morning"
-    image_path: "$CONFIG\\match\\packages\\good-morning-game\\resources\\test.png"
+    image_path: "$CONFIG\\match\\packages\\good-morning\\resources\\test.png"
 
   - trigger: ":morning"
     replace: "{{output}}"
@@ -11,5 +11,5 @@ matches:
       - name: output
         type: shell
         params:
-          cmd: "%APPDATA%\\espanso\\match\\packages\\good-morning-game\\good-morning-game.exe"
+          cmd: "%APPDATA%\\espanso\\match\\packages\\good-morning\\good-morning-game.exe"
           shell: cmd
