--- a/source/good-morning-espanso-package/resources/good-morning_WIN.yml
+++ b/source/good-morning-espanso-package/resources/good-morning_WIN.yml
@@ -3,7 +3,7 @@ parent: default
 
 matches:
   - trigger: ":img-morning"
-    image_path: "$CONFIG\\match\\packages\\good-morning\\resources\\test.png"
+    image_path: "$CONFIG\\match\\packages\\good-morning\\resources\\tmp.gif"
 
   - trigger: ":morning"
     replace: "{{output}}"
