--- a/source/resources/config.json
+++ b/source/resources/config.json
@@ -1,5 +1,5 @@
 {
-    "downloadImage": false,
+    "downloadImage": true,
     "repo": "josh-reeves/good-morning-espanso-package",
     "path": "images",
     "branch": "",
@@ -12,17 +12,17 @@
         "It's going to be a great day!"
     ],
     "mondayGreetings": 
-        [
-            "It's going to be a great week!",
-            "Hope you all had a great weekend!",
-            "How was everyone's weekend?"
-        ],
+    [
+        "It's going to be a great week!",
+        "Hope you all had a great weekend!",
+        "How was everyone's weekend?"
+    ],
     "fridayGreetings": 
-        [
-            "We made it!",
-            "It's Friday!",
-            "Happy Friday!",
-            "One more day and we're done for the week!"
-        ]
+    [
+        "We made it!",
+        "It's Friday!",
+        "Happy Friday!",
+        "One more day and we're done for the week!"
+    ]
 
 }
