Changed names file to a CSV to add handling for birthdays.
Added install script and match file for Mac OS.

--- a/source/resources/config.json
+++ b/source/resources/config.json
@@ -1,5 +1,4 @@
 {
-    "tagChar": ":",
     "downloadImage": true,
     "repo": "josh-reeves/good-morning-espanso-package",
     "path": "images",
@@ -8,6 +7,10 @@
     [
         "Good morning,"
     
+    ],
+    "birthdayGreetings":
+    [
+        "Happy birthday, "
     ],
     "weekdayGreetings": 
     [
